[tool.poetry]
name = "taipan-python-curses"
version = "0.1.0"
description = "Straight curses port"
authors = ["David Nellis <dnellis74@gmail.com>"]
readme = "README.md"
packages = [{include = "taipan"}]

[tool.poetry.dependencies]
python = ">=3.9.20"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
